--- a/web/src/main/webapp/templates/login.xhtml
+++ b/web/src/main/webapp/templates/login.xhtml
@@ -8,37 +8,43 @@
 
 <h:body>
     <ui:composition>
+        <p:accordionPanel>
+            <p:tab title="Login">
+                <h:outputLink value="config.xhtml"
+                              style="text-decoration: none; color: black; font-size: 20px;margin:5px;">
+                    Configuration
+                </h:outputLink>
+                <h:form id="loginForm">
+                    <p:panel id="panel" header="Login to repository" style="margin-bottom:10px;">
+                        <h:panelGrid columns="3">
+                            <h:outputText value="Choose repository"/>
+                            <p:selectOneMenu id="sel" value="#{login.repository}">
+                                <f:selectItems value="#{login.repositories}"/>
+                            </p:selectOneMenu>
+                            <br/>
+                            <h:outputText value="Stay as anonymous?"/>
+                            <p:selectBooleanCheckbox value="#{login.anonymous}"
+                                                     valueChangeListener="#{login.changeAnonumous}">
+                                <f:ajax render="login password"/>
+                            </p:selectBooleanCheckbox>
+                            <br/>
+                            <h:outputLabel for="login" value="Login: *"/>
+                            <p:inputText id="login" value="#{login.login}"
+                                         required="true" label="Login" disabled="#{login.anonymous}"/>
+                            <p:message for="login"/>
 
-        <h:outputLink value="config.xhtml" style="text-decoration: none; color: black; font-size: 20px;margin:5px;">
-            Configuration
-        </h:outputLink>
-        <h:form id="loginForm">
-            <p:panel id="panel" header="Login to repository" style="margin-bottom:10px;">
-                <h:panelGrid columns="3">
-                    <h:outputText value="Choose repository"/>
-                    <p:selectOneMenu id="sel" value="#{login.repository}">
-                        <f:selectItems value="#{login.repositories}"/>
-                    </p:selectOneMenu>
-                    <br/>
-                    <h:outputText value="Stay as anonymous?"/>
-                    <p:selectBooleanCheckbox value="#{login.anonymous}" valueChangeListener="#{login.changeAnonumous}">
-                        <f:ajax render="login password"/>
-                    </p:selectBooleanCheckbox>
-                    <br/>
-                    <h:outputLabel for="login" value="Login: *"/>
-                    <p:inputText id="login" value="#{login.login}"
-                                 required="true" label="Login" disabled="#{login.anonymous}"/>
-                    <p:message for="login"/>
+                            <h:outputLabel for="password" value="Password: *"/>
+                            <p:inputText id="password" value="#{login.password}"
+                                         required="true" label="Password" disabled="#{login.anonymous}"/>
+                            <p:message for="password"/>
 
-                    <h:outputLabel for="password" value="Password: *"/>
-                    <p:inputText id="password" value="#{login.password}"
-                                 required="true" label="Password" disabled="#{login.anonymous}"/>
-                    <p:message for="password"/>
+                            <p:commandButton value="Login" ajax="false"/>
+                        </h:panelGrid>
+                    </p:panel>
+                </h:form>
+            </p:tab>
+        </p:accordionPanel>
 
-                    <p:commandButton value="Login" ajax="false"/>
-                </h:panelGrid>
-            </p:panel>
-        </h:form>
     </ui:composition>
 </h:body>
 </html>
