--- a/web/src/main/webapp/templates/templateLayout.xhtml
+++ b/web/src/main/webapp/templates/templateLayout.xhtml
@@ -23,7 +23,7 @@
             <ui:include src="/templates/treeInfo.xhtml"/>
         </ui:insert>
     </h:panelGrid>
-    <h:panelGrid  bgcolor="#f5f5f5" width="100%">
+    <h:panelGrid  bgcolor="#f5f5f5" width="100%" style="margin-top: 15px;">
         <ui:insert name="footer">
             <ui:include src="/templates/footer.xhtml"/>
         </ui:insert>
