--- a/web/src/main/webapp/templates/treeInfo.xhtml
+++ b/web/src/main/webapp/templates/treeInfo.xhtml
@@ -12,11 +12,19 @@
     <ui:composition>
         <h:form id="formLeftTree">
             <!--<h:outputStylesheet library="style" name="table.css" />-->
+            <!--<p:growl id="messages" showDetail="true" />-->
+            <p:contextMenu for="tree">
+                <p:menuitem value="New Folder" onclick="createWindowDialog.show();" icon="ui-icon-search" />
+            </p:contextMenu>
+
             <p:panelGrid columns="2" style="width: 100%; height: 400px;" styleClass="table">
 
                 <h:outputStylesheet library="style" name="style.css"/>
-                <p:tree value="#{treeBean.root}" var="node" dynamic="true" cache="false"
-                        selectionMode="single" selection="#{treeBean.selectedNode}" id="tree" style="width: 420px;">
+
+
+
+                <p:tree id="tree" value="#{treeBean.root}" var="node" dynamic="true" cache="false"
+                        selectionMode="single" selection="#{treeBean.selectedNode}" style="width: 300px;">
                     <p:ajax event="select" update=":formLeftTree:fsTable"/>
 
                     <p:treeNode expandedIcon="ui-icon-folder-open"
@@ -24,19 +32,52 @@
                         <h:outputText value="#{node.name}"/>
                     </p:treeNode>
                 </p:tree>
+
                 <p:dataTable id="fsTable" var="fsObject" value="#{treeBean.fsList}" scrollable="true" scrollWidth="790"
                              scrollHeight="400" style="width: 770px;"
                              emptyMessage="This folder is Empty">
                     <f:facet name="header">
+
                         <p:inputText value="#{treeBean.selectedFSObject.path}"
                                      style="font-size: 13px; margin-bottom: 5px" size="100"/>
                         <p:tabMenu activeIndex="4">
-                            <p:menuitem value="Create" url="index.xhtml" icon="ui-icon-document"/>
-                            <p:menuitem value="Read" url="index.xhtml" icon="ui-icon-contact"/>
+                            <p:menuitem value="Create Folder" onclick="createWindowDialog.show();"
+                                        icon="ui-icon-document" />
+                                        <!--update= ":formLeftTree:messages"-->
+
+                            <p:menuitem value="Read" url="index.xhtml"
+                                        icon="ui-icon-contact"/>
                             <p:menuitem value="Update" url="index.xhtml" icon="ui-icon-arrowrefresh-1-w"/>
                             <p:menuitem value="Delete" url="index.xhtml" icon="ui-icon-close"/>
                         </p:tabMenu>
+
+                        <p:dialog id="createFolder" widgetVar="createWindowDialog" header="Create Folder" showEffect="fade"
+                                  hideEffect="fade" visible="#{facesContext.validationFailed}" >
+
+                            <h:outputLabel for="name" value="Type folder name: *"/>
+                            <p:inputText id="name" required="true" label="name" size="40"
+                                         requiredMessage="Please enter folder name."
+                                         validatorMessage="Invalid symbols"
+                                         value="#{treeBean.name}">
+                                <f:validateRegex pattern="^(\w+\.?)*\w+$"/>
+                                <!--if name s valid return new folder-->
+                                <!--'/', '\', ':', '&quot;', '*'. '?', '&lt;','&gt;', '|'-->
+                            </p:inputText>
+                            <p:watermark for="name" value="Folder Name"/>
+                            <p:message for="name"/>
+
+                            <p:watermark for="type" value="Folder Type"/>
+                            <h:outputLabel for="type" value="Type folder type:  "/>
+                            <p:inputText id="type" value="#{treeBean.type}"/>
+
+                            <!--update=":formLeftTree:fsTable:createFolder"-->
+                            <p:commandButton value="OK" ajax="false"  actionListener="#{treeBean.createFolder}"/>
+                            <p:commandButton value="Cancel"  oncomplete="createWindowDialog.hide()"/>
+
+                        </p:dialog>
                     </f:facet>
+
+
                     <p:column headerText="Name" sortBy="#{fsObject.name}">
                         <p:graphicImage value="/resources/images/#{fsObject.icon}" width="16" height="16"/>
                         <h:outputText value=" #{fsObject.name}"/>
@@ -45,6 +86,7 @@
                         <h:outputText value="#{fsObject.type}"/>
                     </p:column>
                 </p:dataTable>
+
             </p:panelGrid>
         </h:form>
     </ui:composition>
