Transfered create button from treeBean to ActionBean, added realisation of delete and rename func, but still now work in contex menu, will be released in next commit

--- a/web/src/main/webapp/templates/login.xhtml
+++ b/web/src/main/webapp/templates/login.xhtml
@@ -8,12 +8,13 @@
 
 <h:body>
     <ui:composition>
-        <p:accordionPanel>
+        <p:accordionPanel activeIndex="-1">
             <p:tab title="Login">
                 <h:outputLink value="config.xhtml"
                               style="text-decoration: none; color: black; font-size: 20px;margin:5px;">
                     Configuration
                 </h:outputLink>
+
                 <h:form id="loginForm">
                     <p:panel id="panel" header="Login to repository" style="margin-bottom:10px;">
                         <h:panelGrid columns="3">
