--- a/web/src/main/webapp/templates/treeInfo.xhtml
+++ b/web/src/main/webapp/templates/treeInfo.xhtml
@@ -10,55 +10,56 @@
 
 <h:body>
     <ui:composition>
-        <h:form id="formLeftTree">
-            <!--<h:outputStylesheet library="style" name="table.css" />-->
-            <p:panelGrid columns="2" style="width: 100%; height: 400px;" styleClass="table">
+        <h:form id="treeForm">
 
+            <p:panelGrid columns="2" style="width: 100%; height: 400px;" styleClass="table">
                 <h:outputStylesheet library="style" name="style.css"/>
-                <p:tree value="#{treeBean.root}" var="node" dynamic="true" cache="false"
-                        selectionMode="single" selection="#{treeBean.selectedNode}" id="tree" style="width: 420px;">
-                    <p:ajax event="select" update=":formLeftTree:fsTable"/>
+
+                <p:tree id="tree" value="#{treeBean.root}" var="node" dynamic="true" cache="false"
+                        selectionMode="single" selection="#{treeBean.selectedNode}" style="width: 300px;">
+
+                    <p:ajax event="select" update=":treeForm:fsTable :treeForm:fsTable:backButton"/>
 
                     <p:treeNode expandedIcon="ui-icon-folder-open"
                                 collapsedIcon="ui-icon-folder-collapsed">
+
                         <h:outputText value="#{node.name}"/>
+
                     </p:treeNode>
                 </p:tree>
-                <p:dataTable id="fsTable" var="fsObject" value="#{treeBean.fsList}" scrollable="true" scrollWidth="790"
+
+                <p:dataTable id="fsTable" var="fsObject" value="#{treeBean.fsList}"
+                             scrollable="true" scrollWidth="790"
                              scrollHeight="400" style="width: 770px;"
-                             emptyMessage="This folder is Empty">
+                             emptyMessage="This folder is Empty"
+                             rowKey="#{fsObject.name}"
+                             selection="#{treeBean.selectedFSObject}"
+                             selectionMode="single"
+                        >
+
                     <f:facet name="header">
-                        <p:inputText value="#{treeBean.selectedFSObject.path}"
-                                     style="font-size: 13px; margin-bottom: 5px" size="100"/>
+                        <p:commandButton value="←" disabled="#{treeBean.backButtonDisabled}" id="backButton"
+                                         actionListener="#{treeBean.backButton}"
+                                         update=":treeForm:fsTable :treeForm:fsTable:backButton"/>
+
+                        <p:commandButton value="→" disabled="#{treeBean.forwardButtonDisabled}" id="forwardButton"
+                                         actionListener="#{treeBean.forwardButton}"
+                                         update=":treeForm:fsTable :treeForm:fsTable:forwardButton"/>
+
+                        <p:inputText value="#{treeBean.parent.path}"
+                                     style="font-size: 13px; margin-bottom: 5px" size="90" disabled="true"/>
+
                         <p:tabMenu activeIndex="4">
-
-                            <p:menuitem value="Create" onclick="createWindowDialog.show()" icon="ui-icon-document"/>
-                            <p:menuitem value="Read" url="index.xhtml" icon="ui-icon-contact"/>
-                            <p:menuitem value="Update" url="index.xhtml" icon="ui-icon-arrowrefresh-1-w"/>
-                            <p:menuitem value="Delete" url="index.xhtml" icon="ui-icon-close"/>
-
+                            <p:menuitem value="Create Folder" onclick="createFolderDialog.show();"
+                                        icon="ui-icon-document"/>
+                            <p:menuitem value="Read" url="index.xhtml"
+                                        icon="ui-icon-contact"/>
+                            <p:menuitem value="Update" onclick="renameFolderDialog.show();" icon="ui-icon-arrowrefresh-1-w"/>
+                            <p:menuitem value="Delete" onclick="deleteFolderDialog.show();" icon="ui-icon-close"/>
                         </p:tabMenu>
-                        <p:dialog id="createFolder" widgetVar="createWindowDialog" header="Create Folder" showEffect="fade"
-                                  hideEffect="fade" visible="#{facesContext.validationFailed}" modal="true" >
-
-                            <h:outputLabel for="name" value="Type folder name: *"/>
-                            <p:inputText id="name" required="true" label="name" size="40"
-                                         requiredMessage="Please enter folder name."
-                                         validatorMessage="Invalid symbols"
-                                         value="#{action.name}">
-                                <f:validateRegex pattern="^(\w+\.?)*\w+$"/>
-                                <!--if name s valid return new folder-->
-                                <!--'/', '\', ':', '&quot;', '*'. '?', '&lt;','&gt;', '|'-->
-                            </p:inputText>
-                            <p:watermark for="name" value="Folder Name"/>
-                            <p:message for="name"/>
-
-                            <!--update=":formLeftTree:fsTable:createFolder"-->
-                            <p:commandButton value="OK" ajax="true" update=":formLeftTree:fsTable"  actionListener="#{action.createFolder(treeBean.parent)}"/>
-                            <p:commandButton value="Cancel"  oncomplete="createWindowDialog.hide()"/>
-                        </p:dialog>
 
                     </f:facet>
+
                     <p:column headerText="Name" sortBy="#{fsObject.name}">
                         <p:graphicImage value="/resources/images/#{fsObject.icon}" width="16" height="16"/>
                         <h:outputText value=" #{fsObject.name}"/>
@@ -68,6 +69,52 @@
                     </p:column>
                 </p:dataTable>
             </p:panelGrid>
+
+            <p:contextMenu for="tree">
+                <p:menuitem value="New Folder" onclick="createFolderDialog.show();" icon="ui-icon-document"/>
+                <p:menuitem value="Rename" onclick="renameFolderDialog.show();" icon="ui-icon-document"/>
+                <p:menuitem value="Delete" onclick="deleteFolderDialog.show();" icon="ui-icon-document"/>
+            </p:contextMenu>
+
+            <p:dialog id="createFolder" widgetVar="createFolderDialog" header="Create Folder" modal="true"
+                      showEffect="fade"
+                      hideEffect="fade" visible="#{facesContext.validationFailed}"
+                      resizable="false"
+                    >
+
+                <p:inputText id="name" value="#{action.name}"/>
+                <br></br>
+                <p:commandButton value="OK" actionListener="#{action.createFolder(treeBean.parent)}"
+                                 onclick="createFolderDialog.hide()" update=":treeForm:fsTable"/>
+                <p:commandButton value="Cancel" oncomplete="createFolderDialog.hide()"/>
+            </p:dialog>
+
+            <p:dialog id="renameFolder" widgetVar="renameFolderDialog" header="Rename Folder" modal="true"
+                      showEffect="fade"
+                      hideEffect="fade" visible="#{facesContext.validationFailed}"
+                      resizable="false"
+                    >
+
+                <p:inputText id="newName" value="#{action.name}"/>
+                <br></br>
+                <p:commandButton value="OK" actionListener="#{action.rename(treeBean.selectedFSObject)}"
+                                 onclick="renameFolderDialog.hide()" update=":treeForm:fsTable"/>
+                <p:commandButton value="Cancel" oncomplete="renameFolderDialog.hide()"/>
+            </p:dialog>
+
+            <p:dialog id="deleteFolder" widgetVar="deleteFolderDialog" header="Delete Folder" modal="true"
+                      showEffect="fade"
+                      hideEffect="fade" visible="#{facesContext.validationFailed}"
+                      resizable="false"
+                    >
+                <h:outputText value="Delete all tree?" />
+                <p:selectBooleanCheckbox value="#{action.deleteAllTree}" />
+                <br></br>
+                <p:commandButton value="OK" actionListener="#{action.delete(treeBean.selectedFSObject)}"
+                                 onclick="deleteFolderDialog.hide()" update=":treeForm:fsTable"/>
+                <p:commandButton value="Cancel" oncomplete="deleteFolderDialog.hide()"/>
+            </p:dialog>
+
         </h:form>
     </ui:composition>
 </h:body>
