--- a/web/src/main/webapp/templates/treeInfo.xhtml
+++ b/web/src/main/webapp/templates/treeInfo.xhtml
@@ -31,11 +31,13 @@
                 <p:dataTable id="fsTable" var="fsObject" value="#{treeBean.fsList}"
                              scrollable="true" scrollWidth="790"
                              scrollHeight="400" style="width: 770px;"
-                             emptyMessage="This folder is Empty"
+                             emptyMessage="This folder is empty"
                              rowKey="#{fsObject.name}"
                              selection="#{treeBean.selectedFSObject}"
                              selectionMode="single"
                         >
+                    <p:ajax event="rowSelect" listener="#{treeBean.onRowSelect}" update="@form" />
+
 
                     <f:facet name="header">
                         <p:commandButton value="←" disabled="#{treeBean.backButtonDisabled}" id="backButton"
@@ -54,8 +56,8 @@
                                         icon="ui-icon-document"/>
                             <p:menuitem value="Read" url="index.xhtml"
                                         icon="ui-icon-contact"/>
-                            <p:menuitem value="Update" onclick="renameFolderDialog.show();" icon="ui-icon-arrowrefresh-1-w"/>
-                            <p:menuitem value="Delete" onclick="deleteFolderDialog.show();" icon="ui-icon-close"/>
+                            <p:menuitem value="Rename" onclick="renameDialog.show();" icon="ui-icon-arrowrefresh-1-w"/>
+                            <p:menuitem value="Delete" onclick="deleteDialog.show();" icon="ui-icon-close"/>
                         </p:tabMenu>
 
                     </f:facet>
@@ -72,47 +74,45 @@
 
             <p:contextMenu for="tree">
                 <p:menuitem value="New Folder" onclick="createFolderDialog.show();" icon="ui-icon-document"/>
-                <p:menuitem value="Rename" onclick="renameFolderDialog.show();" icon="ui-icon-document"/>
-                <p:menuitem value="Delete" onclick="deleteFolderDialog.show();" icon="ui-icon-document"/>
+                <p:menuitem value="Rename" onclick="renameDialog.show();" icon="ui-icon-document"/>
+                <p:menuitem value="Delete" onclick="deleteDialog.show();" icon="ui-icon-document"/>
             </p:contextMenu>
 
             <p:dialog id="createFolder" widgetVar="createFolderDialog" header="Create Folder" modal="true"
-                      showEffect="fade"
-                      hideEffect="fade" visible="#{facesContext.validationFailed}"
-                      resizable="false"
-                    >
-
-                <p:inputText id="name" value="#{action.name}"/>
-                <br></br>
-                <p:commandButton value="OK" actionListener="#{action.createFolder(treeBean.parent)}"
-                                 onclick="createFolderDialog.hide()" update=":treeForm:fsTable"/>
-                <p:commandButton value="Cancel" oncomplete="createFolderDialog.hide()"/>
+                    showEffect="fade"
+                    hideEffect="fade"
+                    resizable="false"
+                >
+                    <p:inputText id="name" value="#{action.name}"/>
+                    <br></br>
+                    <p:commandButton value="OK" action="#{treeBean.updateTree}"  actionListener="#{action.createFolder(treeBean.parent)}"
+                        onclick="createFolderDialog.hide()" update=":treeForm" />
+                    <p:commandButton value="Cancel" oncomplete="createFolderDialog.hide()"/>
             </p:dialog>
 
-            <p:dialog id="renameFolder" widgetVar="renameFolderDialog" header="Rename Folder" modal="true"
+            <p:dialog id="rename" widgetVar="renameDialog" header="Rename" modal="true"
                       showEffect="fade"
-                      hideEffect="fade" visible="#{facesContext.validationFailed}"
+                      hideEffect="fade"
                       resizable="false"
                     >
-
-                <p:inputText id="newName" value="#{action.name}"/>
-                <br></br>
-                <p:commandButton value="OK" actionListener="#{action.rename(treeBean.selectedFSObject)}"
-                                 onclick="renameFolderDialog.hide()" update=":treeForm:fsTable"/>
-                <p:commandButton value="Cancel" oncomplete="renameFolderDialog.hide()"/>
+                    <p:inputText id="newName" value="#{action.newName}"/>
+                    <br></br>
+                    <p:commandButton type="submit" value="OK" action="#{treeBean.updateTree}" actionListener="#{action.rename(treeBean.selectedFSObject)}"
+                                     onclick="renameDialog.hide()" update=":treeForm" />
+                    <p:commandButton value="Cancel" oncomplete="renameDialog.hide()"/>
             </p:dialog>
 
-            <p:dialog id="deleteFolder" widgetVar="deleteFolderDialog" header="Delete Folder" modal="true"
-                      showEffect="fade"
-                      hideEffect="fade" visible="#{facesContext.validationFailed}"
-                      resizable="false"
-                    >
-                <h:outputText value="Delete all tree?" />
-                <p:selectBooleanCheckbox value="#{action.deleteAllTree}" />
-                <br></br>
-                <p:commandButton value="OK" actionListener="#{action.delete(treeBean.selectedFSObject)}"
-                                 onclick="deleteFolderDialog.hide()" update=":treeForm:fsTable"/>
-                <p:commandButton value="Cancel" oncomplete="deleteFolderDialog.hide()"/>
+            <p:dialog id="delete" widgetVar="deleteDialog" header="Delete" modal="true"
+                    showEffect="fade"
+                    hideEffect="fade"
+                    resizable="false"
+                >
+                    <h:outputText value="Delete all tree?" />
+                    <p:selectBooleanCheckbox value="#{action.deleteAllTree}" />
+                    <br></br>
+                    <p:commandButton value="OK" action="#{treeBean.updateTree}" actionListener="#{action.delete(treeBean.selectedFSObject)}"
+                        onclick="deleteFolderDialog.hide()" update=":treeForm"/>
+                    <p:commandButton value="Cancel" oncomplete="deleteFolderDialog.hide()"/>
             </p:dialog>
 
         </h:form>
