Cargo tomcat JBehave

--- a/site/src/main/webapp/templates/login.xhtml
+++ b/site/src/main/webapp/templates/login.xhtml
@@ -11,6 +11,7 @@
 
         <h:outputLink value="config.xhtml" style="text-decoration: none; color: black; font-size: 20px;margin:5px;">
             Configuration
+            Hallo user
         </h:outputLink>
         <h:form id="loginForm">
             <p:panel id="panel" header="Login to repository" style="margin-bottom:10px;">
