--- a/site/src/main/webapp/templates/templateLayout.xhtml
+++ b/site/src/main/webapp/templates/templateLayout.xhtml
@@ -5,7 +5,9 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-
+ <script type="text/javascript"  src="resources/js/dojo/dojo.js"
+            djConfig="preventBackButtonFix: false">
+    </script>
 </h:head>
 <h:body>
     <h:panelGrid bgcolor="#f5f5f5" width="100%">
